--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HnA-eR-7Ag">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,22 +8,47 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Users-->
         <scene sceneID="svo-DY-nBK">
             <objects>
-                <tableViewController id="TIW-wB-lb4" sceneMemberID="viewController">
+                <tableViewController id="TIW-wB-lb4" customClass="UserTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="BLH-LN-no5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Oem-JU-Mpg">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="48" id="Oem-JU-Mpg" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="48"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Oem-JU-Mpg" id="eGT-sP-KTZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mr. Joseph Veverka" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xsu-df-tAo">
+                                            <rect key="frame" x="60" y="13" width="150" height="22"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lambda_Logo_Full" translatesAutoresizingMaskIntoConstraints="NO" id="PHW-9g-xey">
+                                            <rect key="frame" x="10" y="5" width="40" height="38"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="PHW-9g-xey" secondAttribute="height" multiplier="20:19" id="CAb-g1-BNv"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="PHW-9g-xey" firstAttribute="leading" secondItem="eGT-sP-KTZ" secondAttribute="leading" constant="10" id="0Fm-Fm-4AZ"/>
+                                        <constraint firstItem="Xsu-df-tAo" firstAttribute="top" secondItem="eGT-sP-KTZ" secondAttribute="topMargin" constant="2" id="DHd-m8-zJd"/>
+                                        <constraint firstItem="PHW-9g-xey" firstAttribute="top" secondItem="eGT-sP-KTZ" secondAttribute="top" constant="5" id="JlS-dY-SQp"/>
+                                        <constraint firstAttribute="bottom" secondItem="PHW-9g-xey" secondAttribute="bottom" constant="5" id="S6e-DW-pc3"/>
+                                        <constraint firstItem="Xsu-df-tAo" firstAttribute="leading" secondItem="PHW-9g-xey" secondAttribute="trailing" constant="10" id="dV1-YW-NOl"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Xsu-df-tAo" secondAttribute="bottom" constant="2" id="sbq-CN-D9v"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="CZW-st-9cM" kind="presentation" identifier="UserDetailModalSegue" id="EPw-3q-O7Y"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -31,25 +56,95 @@
                             <outlet property="delegate" destination="TIW-wB-lb4" id="O0m-MO-elZ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Users" id="uSZ-bx-W9T">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="E0M-yS-iZ8"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="PHW-9g-xey" id="B8a-2Z-Y5C"/>
+                        <outlet property="nameLabel" destination="Xsu-df-tAo" id="Y7f-SW-7rw"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ymc-N7-42M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-142" y="27"/>
+            <point key="canvasLocation" x="796" y="26.53673163418291"/>
         </scene>
-        <!--View Controller-->
+        <!--User Detail View Controller-->
         <scene sceneID="8dR-Bc-bzR">
             <objects>
-                <viewController id="CZW-st-9cM" sceneMemberID="viewController">
+                <viewController id="CZW-st-9cM" customClass="UserDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TIu-Sz-DUh">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pbh-q6-HFV">
+                                <rect key="frame" x="16" y="113" width="343" height="243"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="zBS-kr-Etk">
+                                <rect key="frame" x="16" y="498" width="115" height="83.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J5a-Gu-kZp">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bK-VI-nHl">
+                                        <rect key="frame" x="0.0" y="31.5" width="115" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OD6-it-O49">
+                                        <rect key="frame" x="0.0" y="63" width="115" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Pbh-q6-HFV" firstAttribute="leading" secondItem="c6i-bs-nRc" secondAttribute="leading" constant="16" id="Erf-0h-4yh"/>
+                            <constraint firstItem="zBS-kr-Etk" firstAttribute="leading" secondItem="c6i-bs-nRc" secondAttribute="leading" constant="16" id="MKB-Hv-cvl"/>
+                            <constraint firstItem="c6i-bs-nRc" firstAttribute="bottom" secondItem="zBS-kr-Etk" secondAttribute="bottom" constant="65.5" id="mgm-0Y-Zxz"/>
+                            <constraint firstItem="Pbh-q6-HFV" firstAttribute="top" secondItem="c6i-bs-nRc" secondAttribute="top" constant="113" id="rfU-hM-v4t"/>
+                            <constraint firstItem="c6i-bs-nRc" firstAttribute="trailing" secondItem="Pbh-q6-HFV" secondAttribute="trailing" constant="16" id="vF9-vc-gzU"/>
+                            <constraint firstItem="zBS-kr-Etk" firstAttribute="top" secondItem="Pbh-q6-HFV" secondAttribute="bottom" constant="142" id="x3z-ha-9Sh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="c6i-bs-nRc"/>
                     </view>
+                    <connections>
+                        <outlet property="emailLabel" destination="OD6-it-O49" id="sMM-2c-6OA"/>
+                        <outlet property="imageView" destination="Pbh-q6-HFV" id="0Bx-fZ-HeM"/>
+                        <outlet property="nameLabel" destination="J5a-Gu-kZp" id="ezC-xo-bkd"/>
+                        <outlet property="phoneNumberLabel" destination="7bK-VI-nHl" id="YnV-3i-ZhI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gJt-Ox-vQb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="631" y="27"/>
+            <point key="canvasLocation" x="1580" y="26.53673163418291"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="9C5-hU-XSA">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HnA-eR-7Ag" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e3c-Uw-SJG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TIW-wB-lb4" kind="relationship" relationship="rootViewController" id="Q8R-GA-61e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qng-5j-a9n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="66" y="27"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Lambda_Logo_Full" width="574" height="249"/>
+    </resources>
 </document>
